about text change

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@ var __adobewebfontsappname__ = "muse";
       <img class="block" id="u5401_img" src="images/me.png" alt="" width="318" height="318"/>
      </div>
      <div class="clearfix grpelem" id="u5447-4"><!-- content -->
-      <p>I'm a Bangkok&#45;based graphic designer, art director and animator, born and raised in Bangkok, Thailand. I love to work across various medium including animation, graphic design and illustration. I’m passionate with art making that involved handcrafting and working across variety of mediums. Most of my work and heavily inspired by music, I’ve worked on many projects related with music industry and indie music scene in Thailand from album artwork to music video.</p>
+      <p>Nitcha Fame Tothong is a Bangkok&#45;based graphic designer, art director and animator, born and raised in Bangkok, Thailand. She loves to work across various medium including animation, graphic design and illustration. She is passionated in art making that involved handcrafting and working across variety of mediums. Most of her works are heavily inspired by music. She has worked on many projects related with music industry and indie music scene in Thailand from album artwork to music video.</p>
      </div>
     </div>
     <div class="clearfix colelem" id="u6326"><!-- group -->
