--- a/project.html
+++ b/project.html
@@ -12,10 +12,10 @@
   <title>project</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3788448303"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?184272346"/>
-  <link rel="stylesheet" type="text/css" href="css/project.css?25197900" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3820918937"/>
+  <link rel="stylesheet" type="text/css" href="css/project.css?4149229160" id="pagesheet"/>
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_project.css?156152001"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_project.css?430134013"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -24,7 +24,7 @@ var __adobewebfontsappname__ = "muse";
 </script>
   <!-- JS includes -->
   <script type="text/javascript">
-   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/quicksand:n4,i4:all.js" type="text/javascript">\x3C/script>');
+   document.write('\x3Cscript src="' + (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//webfonts.creativecloud.com/quicksand:n4,i4,n3:all.js" type="text/javascript">\x3C/script>');
 </script>
     <!--custom head HTML-->
   <script src="http://isotope.metafizzy.co/beta/isotope.pkgd.min.js" type="text/javascript"></script>
@@ -279,6 +279,11 @@ transition:300ms;
      <a class="nonblock nontext rgba-background clearfix grpelem" id="u15298-9" href="teefox.html" data-href="page:U3938" data-muse-uid="U15298" data-muse-type="txt_frame"><!-- content --><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>Tee Fox</p><p id="u15298-7"><span id="u15298-6">Illustration</span></p></a>
      <!-- /m_editable -->
     </div>
+    <!-- m_editable region-id="editable-static-tag-U15715" template="project.html" data-type="html" data-ice-options="disableImageResize,link" -->
+    <div class="clearfix colelem" id="u15715-4" data-muse-uid="U15715" data-muse-type="txt_frame"><!-- content -->
+     <p>© 2009 ~ 2016 Nitcha Tothong – All rights reserved.</p>
+    </div>
+    <!-- /m_editable -->
    </div>
   </div>
   <div class="preload_images">
