--- a/dilation.html
+++ b/dilation.html
@@ -12,8 +12,8 @@
   <title>Dilation</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?3788448303"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?184272346"/>
-  <link rel="stylesheet" type="text/css" href="css/dilation.css?4060958557" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?3820918937"/>
+  <link rel="stylesheet" type="text/css" href="css/dilation.css?4041491788" id="pagesheet"/>
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_dilation.css?4163228108"/>
   <![endif]-->
@@ -40,6 +40,44 @@ var __adobewebfontsappname__ = "muse";
      <a class="nonblock nontext clearfix grpelem" id="u7869-4" href="project.html" data-href="page:U15339"><!-- content --><p id="u7869-2"><span class="Character-Style" id="u7869">PROJECTS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u7871-4" href="labs.html" data-href="page:U7893"><!-- content --><p id="u7871-2"><span class="Character-Style" id="u7871">LABS</span></p></a>
      <a class="nonblock nontext clearfix grpelem" id="u154-4" href="about.html" data-href="page:U2777"><!-- content --><p id="u154-2"><span class="Character-Style" id="u154">ABOUT</span></p></a>
+    </div>
+    <div class="colelem" id="u15716"><!-- custom html -->
+     <iframe src="//player.vimeo.com/video/152906732" width="800" height="450" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
+
+
+
+
+</div>
+    <div class="clearfix colelem" id="pu13740-12"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U13740" template="dilation.html" data-type="html" data-ice-options="disableImageResize,link" -->
+     <div class="clearfix grpelem" id="u13740-12" data-muse-uid="U13740" data-muse-type="txt_frame"><!-- content -->
+      <p>Dilation is visual experimental sculpture that combine my interest about dream like feeling and sensation of human body into projection mapping on gigantic head paper sculpture. The videos that use to project on is using a face of a person and added a distorted layer using GLSL shaders on top. In order to make unreal effects that build loose narrative to participations to fill.</p>
+      <p>&nbsp;</p>
+      <p>The sculpture is part of Qualia exhibition at <span><a class="nonblock" href="http://livestream.com/accounts/8720916/Qualia" target="_blank">Livestream</a></span><span id="u13740-8"> </span>Bushwhack among with students from Design and Technology program at Parsons the school of design.</p>
+     </div>
+     <!-- /m_editable -->
+     <div class="clearfix grpelem" id="u13735"><!-- group -->
+      <!-- m_editable region-id="editable-static-tag-U13736" template="dilation.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u13736-13" data-muse-uid="U13736" data-muse-type="txt_frame"><!-- content -->
+       <p id="u13736-2"><span class="BoldMenuLink" id="u13736">Dilation</span></p>
+       <p id="u13736-4">Paper Sculpture, Projection Mapping,</p>
+       <p id="u13736-6">GLSL shaders</p>
+       <p id="u13736-8">Role : Designer</p>
+       <p id="u13736-10">2015</p>
+       <p>&nbsp;</p>
+      </div>
+      <!-- /m_editable -->
+      <!-- m_editable region-id="editable-static-tag-U13737" template="dilation.html" data-type="html" data-ice-options="disableImageResize,link" -->
+      <div class="clearfix grpelem" id="u13737-12" data-muse-uid="U13737" data-muse-type="txt_frame"><!-- content -->
+       <p id="u13737">&nbsp;</p>
+       <p id="u13737-2">&nbsp;</p>
+       <p id="u13737-4">Credits</p>
+       <p id="u13737-6"><span id="u13737-5">Collaborated with Saman Tehrani</span></p>
+       <p id="u13737-8">Part of Performative Sculpture, Fall 2015</p>
+       <p id="u13737-10">Teaching by Jesse Hardling</p>
+      </div>
+      <!-- /m_editable -->
+     </div>
     </div>
     <div class="SlideShowWidget clearfix colelem" id="slideshowu13688"><!-- none box -->
      <div class="popup_anchor" id="u13696popup">
@@ -128,37 +166,6 @@ var __adobewebfontsappname__ = "muse";
        <p>&nbsp;</p>
        <p>&nbsp;</p>
        <p>&nbsp;</p>
-      </div>
-      <!-- /m_editable -->
-     </div>
-    </div>
-    <div class="clearfix colelem" id="pu13740-12"><!-- group -->
-     <!-- m_editable region-id="editable-static-tag-U13740" template="dilation.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u13740-12" data-muse-uid="U13740" data-muse-type="txt_frame"><!-- content -->
-      <p>Dilation is visual experimental sculpture that combine my interest about dream like feeling and sensation of human body into projection mapping on gigantic head paper sculpture. The videos that use to project on is using a face of a person and added a distorted layer using GLSL shaders on top. In order to make unreal effects that build loose narrative to participations to fill.</p>
-      <p>&nbsp;</p>
-      <p>The sculpture is part of Qualia exhibition at <span><a class="nonblock" href="http://livestream.com/accounts/8720916/Qualia" target="_blank">Livestream</a></span><span id="u13740-8"> </span>Bushwhack among with students from Design and Technology program at Parsons the school of design.</p>
-     </div>
-     <!-- /m_editable -->
-     <div class="clearfix grpelem" id="u13735"><!-- group -->
-      <!-- m_editable region-id="editable-static-tag-U13736" template="dilation.html" data-type="html" data-ice-options="disableImageResize,link" -->
-      <div class="clearfix grpelem" id="u13736-13" data-muse-uid="U13736" data-muse-type="txt_frame"><!-- content -->
-       <p id="u13736-2"><span class="BoldMenuLink" id="u13736">Dilation</span></p>
-       <p id="u13736-4">Paper Sculpture, Projection Mapping,</p>
-       <p id="u13736-6">GLSL shaders</p>
-       <p id="u13736-8">Role : Designer</p>
-       <p id="u13736-10">2015</p>
-       <p>&nbsp;</p>
-      </div>
-      <!-- /m_editable -->
-      <!-- m_editable region-id="editable-static-tag-U13737" template="dilation.html" data-type="html" data-ice-options="disableImageResize,link" -->
-      <div class="clearfix grpelem" id="u13737-12" data-muse-uid="U13737" data-muse-type="txt_frame"><!-- content -->
-       <p id="u13737">&nbsp;</p>
-       <p id="u13737-2">&nbsp;</p>
-       <p id="u13737-4">Credits</p>
-       <p id="u13737-6"><span id="u13737-5">Collaborated with Saman Tehrani</span></p>
-       <p id="u13737-8">Part of Performative Sculpture, Fall 2015</p>
-       <p id="u13737-10">Teaching by Jesse Hardling</p>
       </div>
       <!-- /m_editable -->
      </div>
