--- a/attamatic.html
+++ b/attamatic.html
@@ -13,10 +13,10 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?230036770"/>
-  <link rel="stylesheet" type="text/css" href="css/attamatic.css?4152324780" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/attamatic.css?3951628989" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_attamatic.css?109484097"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_attamatic.css?4088803638"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -124,7 +124,7 @@ var __adobewebfontsappname__ = "muse";
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U21240-BP_infinity" template="attamatic.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame clearfix grpelem" id="u21240" data-muse-uid="U21240" data-muse-type="img_frame"><!-- image -->
-        <img class="ImageInclude position_content" id="u21240_img" data-src="images/12.gif" src="images/blank.gif" alt="" data-width="606" data-height="337" data-muse-src="images/12.gif"/>
+        <img class="ImageInclude position_content" id="u21240_img" data-src="images/1.gif" src="images/blank.gif" alt="" data-width="606" data-height="337" data-muse-src="images/1.gif"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U21203-BP_infinity" template="attamatic.html" data-type="image" data-ice-options="srcAttr=data-src" -->
@@ -174,7 +174,7 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="pu18988"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U18988-BP_infinity" template="attamatic.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u18988" data-muse-uid="U18988" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u18988_img" src="images/keybod_interactiondiagram.png" alt="" width="375" height="145" data-muse-src="images/keybod_interactiondiagram.png"/>
+      <img class="block" id="u18988_img" src="images/keybod_interactiondiagram%20copy.png" alt="" width="375" height="145" data-muse-src="images/keybod_interactiondiagram%20copy.png"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U21034-BP_infinity" template="attamatic.html" data-type="html" data-ice-options="disableImageResize,link" -->
@@ -186,11 +186,16 @@ var __adobewebfontsappname__ = "muse";
      </div>
      <!-- /m_editable -->
     </div>
-    <!-- m_editable region-id="editable-static-tag-U15233-BP_infinity" template="attamatic.html" data-type="html" data-ice-options="disableImageResize,link" -->
-    <div class="clearfix colelem" id="u15233-6" data-muse-uid="U15233" data-muse-type="txt_frame"><!-- content -->
-     <p id="u15233-4"><span><a class="nonblock" href="keybod.html" data-href="page:U11454"><span id="u15233">See full description of Keybod. Concept, Research, Design Process</span></a></span></p>
+    <div class="clearfix colelem" id="u24108"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U24105" template="attamatic.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <div class="pointer_cursor clearfix grpelem" id="u24105" data-muse-uid="U24105"><!-- group -->
+      <a class="block" href="keybod.html" data-href="page:U11454"></a>
+      <!-- m_editable region-id="editable-static-tag-U15233-BP_infinity" template="attamatic.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
+      <a class="nonblock nontext clearfix grpelem" id="u15233-4" href="keybod.html" data-href="page:U11454" data-muse-uid="U15233" data-muse-type="txt_frame"><!-- content --><p id="u15233-2"><span id="u15233">See full description of Keybod. Concept, Research, Design Process</span></p></a>
+      <!-- /m_editable -->
+     </div>
+     <!-- /m_editable -->
     </div>
-    <!-- /m_editable -->
     <a class="anchor_item colelem" id="clickkick_short"></a>
     <div class="SlideShowWidget clearfix colelem" id="slideshowu21423"><!-- none box -->
      <div class="popup_anchor" id="u21430popup">
@@ -202,7 +207,7 @@ var __adobewebfontsappname__ = "muse";
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U21578-BP_infinity" template="attamatic.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame clearfix grpelem" id="u21578" data-muse-uid="U21578" data-muse-type="img_frame"><!-- image -->
-        <img class="ImageInclude position_content" id="u21578_img" data-src="images/22.gif" src="images/blank.gif" alt="" data-width="606" data-height="337" data-muse-src="images/22.gif"/>
+        <img class="ImageInclude position_content" id="u21578_img" data-src="images/2.gif" src="images/blank.gif" alt="" data-width="606" data-height="337" data-muse-src="images/2.gif"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U21605-BP_infinity" template="attamatic.html" data-type="image" data-ice-options="srcAttr=data-src" -->
@@ -247,7 +252,7 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="pu21086"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U21086-BP_infinity" template="attamatic.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u21086" data-muse-uid="U21086" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u21086_img" src="images/clickkick_interactiondiagram%20copy.png" alt="" width="395" height="153" data-muse-src="images/clickkick_interactiondiagram%20copy.png"/>
+      <img class="block" id="u21086_img" src="images/clickkick_interactiondiagram_w.png" alt="" width="395" height="153" data-muse-src="images/clickkick_interactiondiagram_w.png"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U21045-BP_infinity" template="attamatic.html" data-type="html" data-ice-options="disableImageResize,link" -->
@@ -316,7 +321,7 @@ var __adobewebfontsappname__ = "muse";
     <div class="clearfix colelem" id="pu18978"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U18978-BP_infinity" template="attamatic.html" data-type="image" -->
      <div class="clip_frame grpelem" id="u18978" data-muse-uid="U18978" data-muse-type="img_frame"><!-- image -->
-      <img class="block" id="u18978_img" src="images/textneck_interactiondiagram.png" alt="" width="338" height="202" data-muse-src="images/textneck_interactiondiagram.png"/>
+      <img class="block" id="u18978_img" src="images/textneck_interactiondiagram_w.png" alt="" width="338" height="202" data-muse-src="images/textneck_interactiondiagram_w.png"/>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U21119-BP_infinity" template="attamatic.html" data-type="html" data-ice-options="disableImageResize,link" -->
