--- a/betweenspaces.html
+++ b/betweenspaces.html
@@ -13,10 +13,10 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?230036770"/>
-  <link rel="stylesheet" type="text/css" href="css/betweenspaces.css?347481875" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/betweenspaces.css?4067154024" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_betweenspaces.css?3871072655"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_betweenspaces.css?3879716316"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -208,21 +208,21 @@ var __adobewebfontsappname__ = "muse";
      <p id="u19890-11">&nbsp;</p>
     </div>
     <!-- /m_editable -->
-    <div class="clearfix colelem" id="pu19891-30"><!-- group -->
+    <div class="clearfix colelem" id="pu19891-63"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U19891-BP_infinity" template="betweenspaces.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u19891-30" data-muse-uid="U19891" data-muse-type="txt_frame"><!-- content -->
+     <div class="clearfix grpelem" id="u19891-63" data-muse-uid="U19891" data-muse-type="txt_frame"><!-- content -->
       <p id="u19891-2">Credits</p>
-      <p id="u19891-6">Art direction and Poster design:<span id="u19891-4"> Me, </span>Chuck Kuan, Jingying (Eric) Jiang</p>
-      <p id="u19891-8">Animated identity: Me, Glitch filter: Hang Do Thi Duc</p>
-      <p id="u19891-10">Pamphlet layout and Postcard design: Chuck Kuan, Charles Saidel</p>
-      <p id="u19891-12">Map design and email invitation: Sarah Page</p>
-      <p id="u19891-14">Photoshoot: Me, Hang Do Thi Duc, Shakti Mb</p>
-      <p id="u19891-16">GIF for photoshoot: Shakti Mb, Nima Behravan</p>
-      <p id="u19891-18">PR &amp; Social Network: Umi Syam, Jingying (Eric) Jiang, Karen Mercado Campos</p>
-      <p id="u19891-22">Team: Nithya Asokan, Ralph More<span id="u19891-20">a</span>u</p>
-      <p id="u19891-23">&nbsp;</p>
-      <p id="u19891-27"><span><a class="nonblock" href="http://mfadt.parsons.edu/2016/acknowledgments/">Full Credits Here</a></span></p>
-      <p id="u19891-28">&nbsp;</p>
+      <p id="u19891-12">Art direction and Poster design:<span id="u19891-4"> Me, </span><span><a class="nonblock" href="http://galettedesrois.info/"><span id="u19891-5">Chuck Kuan</span></a></span>, <span><a class="nonblock" href="http://www.ericjiang.io/"><span id="u19891-9">Jingying (Eric) Jiang</span></a></span></p>
+      <p id="u19891-18">Animated identity: Me, Glitch filter: <span><a class="nonblock" href="http://22-8miles.com"><span id="u19891-14">Hang Do Thi Duc</span></a></span></p>
+      <p id="u19891-24">Pamphlet layout and Postcard design: <span><a class="nonblock" href="http://galettedesrois.info/"><span id="u19891-20">Chuck Kuan</span></a></span>, Charles Saidel</p>
+      <p id="u19891-26">Map design and email invitation: Sarah Page</p>
+      <p id="u19891-35">Photoshoot: Me, <span><a class="nonblock" href="http://22-8miles.com"><span id="u19891-28">Hang Do Thi Duc</span></a></span>, <span><a class="nonblock" href="http://www.shakti-mb.com/"><span id="u19891-32">Shakti Mb</span></a></span></p>
+      <p id="u19891-41">GIF for photoshoot: <span><a class="nonblock" href="http://www.shakti-mb.com/"><span id="u19891-37">Shakti Mb</span></a></span>, Nima Behravan</p>
+      <p id="u19891-51">PR &amp; Social Network: <span><a class="nonblock" href="http://umisyam.com/"><span id="u19891-43">Umi Syam</span></a></span>, <span><a class="nonblock" href="http://www.ericjiang.io/"><span id="u19891-47">Jingying (Eric) Jiang</span></a></span>, Karen Mercado Campos</p>
+      <p id="u19891-55">Team: Nithya Asokan, Ralph More<span id="u19891-53">a</span>u</p>
+      <p id="u19891-56">&nbsp;</p>
+      <p id="u19891-60"><span><a class="nonblock" href="http://mfadt.parsons.edu/2016/acknowledgments/">Full Credits Here</a></span></p>
+      <p id="u19891-61">&nbsp;</p>
      </div>
      <!-- /m_editable -->
      <div class="SlideShowWidget clearfix grpelem" id="slideshowu20832"><!-- none box -->
