--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?230036770"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?432643886" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?380157886" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?4160313868"/>
@@ -165,8 +165,8 @@ transition:300ms;
     <div class="clearfix colelem" id="u15348"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U15350-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
      <div class="clearfix grpelem" id="u15350-11" data-muse-uid="U15350" data-muse-type="txt_frame"><!-- content -->
-      <p id="u15350-6"><span class="BoldMenuLink" id="u15350">I'm currently exploring, researching the speculative human-machine interaction by creating a series of wearable devices questioning how alternative tool can shape motility, which could impact the perception of the sedentary society. See more about project '</span><span><a class="nonblock" href="attamatic.html" data-href="page:U15059"><span class="BoldMenuLink" id="u15350-2">Atta-matic</span></a></span><span class="BoldMenuLink" id="u15350-5">.'</span></p>
-      <p id="u15350-9"><span id="u15350-7">— </span>2015–Ongoing</p>
+      <p id="u15350-6"><span class="BoldMenuLink" id="u15350">I'm recently exploring, researching the speculative human-machine interaction by creating a series of wearable devices questioning how alternative tool can shape motility, which could impact the perception of the sedentary society. See more about project '</span><span><a class="nonblock" href="attamatic.html" data-href="page:U15059"><span class="BoldMenuLink" id="u15350-2">Atta-matic</span></a></span><span class="BoldMenuLink" id="u15350-5">.'</span></p>
+      <p id="u15350-9"><span id="u15350-7">— </span>2015–2016</p>
      </div>
      <!-- /m_editable -->
     </div>
@@ -391,18 +391,13 @@ transition:300ms;
     <!-- m_editable region-id="editable-static-tag-U15515-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext anim_swing clearfix colelem" id="u15515-4" href="index.html#project_home" data-href="anchor:U63:U15545" data-muse-uid="U15515" data-muse-type="txt_frame"><!-- content --><p>© 2009 ~ 2016 Nitcha Tothong – All rights reserved.</p></a>
     <!-- /m_editable -->
-    <div class="clearfix colelem" id="pu19496"><!-- group -->
-     <div class="clearfix grpelem" id="u19496"><!-- group -->
-      <!-- m_editable region-id="editable-static-tag-U19497" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-      <a class="nonblock nontext grpelem" id="u19497" href="betweenspaces.html" data-href="page:U19544" data-muse-uid="U19497" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- custom html -->
+    <div class="clearfix colelem" id="u24102"><!-- group -->
+     <!-- m_editable region-id="editable-static-tag-U24091" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
+     <a class="nonblock nontext anim_swing clearfix grpelem" id="u24091" href="index.html#project_home" data-href="anchor:U63:U15545" data-muse-uid="U24091"><!-- group --><div class="clearfix grpelem" id="u24092"><!-- group --><div class="grpelem" id="u24093" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=-1,M12=0,M21=0,M22=-1,SizingMethod='auto expand')" data-mu-ie-matrix-dx="0" data-mu-ie-matrix-dy="0"><!-- custom html -->
 <!-- This Adobe Muse widget was created by the team at MuseFree.com -->
 	<div class="arrow bounce">
 
-</a>
-      <!-- /m_editable -->
-     </div>
-     <!-- m_editable region-id="editable-static-tag-U19516" template="index.html" data-type="html" data-ice-options="clickable" data-ice-editable="link" -->
-     <a class="nonblock nontext anim_swing grpelem" id="u19516" href="index.html#project_home" data-href="anchor:U63:U15545" data-muse-uid="U19516"><!-- simple frame --></a>
+</div></div></a>
      <!-- /m_editable -->
     </div>
    </div>
