updat about page

--- a/attamatic.html
+++ b/attamatic.html
@@ -12,8 +12,8 @@
   <title>attamatic</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?230036770"/>
-  <link rel="stylesheet" type="text/css" href="css/attamatic.css?3951628989" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?13956267"/>
+  <link rel="stylesheet" type="text/css" href="css/attamatic.css?53056058" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_attamatic.css?4088803638"/>
@@ -129,7 +129,7 @@ var __adobewebfontsappname__ = "muse";
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U21203-BP_infinity" template="attamatic.html" data-type="image" data-ice-options="srcAttr=data-src" -->
        <div class="SSSlide invi clip_frame clearfix grpelem" id="u21203" data-muse-uid="U21203" data-muse-type="img_frame"><!-- image -->
-        <img class="ImageInclude position_content" id="u21203_img" data-src="images/screen%20shot%202016-06-20%20at%20124929%20am.jpg" src="images/blank.gif" alt="" data-width="606" data-height="338" data-muse-src="images/screen%20shot%202016-06-20%20at%20124929%20am.jpg"/>
+        <img class="ImageInclude position_content" id="u21203_img" data-src="images/screen%20shot%202016-06-20%20at%20124929%20am.png" src="images/blank.gif" alt="" data-width="606" data-height="338" data-muse-src="images/screen%20shot%202016-06-20%20at%20124929%20am.png"/>
        </div>
        <!-- /m_editable -->
        <!-- m_editable region-id="editable-static-tag-U21275-BP_infinity" template="attamatic.html" data-type="image" data-ice-options="srcAttr=data-src" -->
@@ -352,7 +352,7 @@ var __adobewebfontsappname__ = "muse";
       <p id="u19721-19">Bushwick Collective 2016, Brooklyn</p>
       <p id="u19721-21">Between Spaces, New York</p>
       <p id="u19721-23">SXstyle at SXSW, Austin</p>
-      <p id="u19721-25">NYC Media Lab, New York</p>
+      <p id="u19721-25">NYC Media Lab Summit 2015, New York</p>
       <p id="u19721-27">Demo Night: Sound + Textiles at Eyebeam, New York</p>
      </div>
      <!-- /m_editable -->
