--- a/dilation.html
+++ b/dilation.html
@@ -12,8 +12,8 @@
   <title>Dilation</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?230036770"/>
-  <link rel="stylesheet" type="text/css" href="css/dilation.css?3953375870" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?13956267"/>
+  <link rel="stylesheet" type="text/css" href="css/dilation.css?4267671507" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_dilation.css?4163228108"/>
@@ -54,7 +54,7 @@ var __adobewebfontsappname__ = "muse";
      <div class="clearfix grpelem" id="u13740-12" data-muse-uid="U13740" data-muse-type="txt_frame"><!-- content -->
       <p>Dilation is visual experimental sculpture that combine my interest about dream like feeling and sensation of human body into projection mapping on gigantic head paper sculpture. The videos that use to project on is using a face of a person and added a distorted layer using GLSL shaders on top. In order to make unreal effects that build loose narrative to participations to fill.</p>
       <p>&nbsp;</p>
-      <p>The sculpture is part of Qualia exhibition at <span><a class="nonblock" href="http://livestream.com/accounts/8720916/Qualia" target="_blank">Livestream</a></span><span id="u13740-8"> </span>Bushwhack among with students from Design and Technology program at Parsons the school of design.</p>
+      <p>The sculpture is part of Qualia exhibition at <span><a class="nonblock" href="http://livestream.com/accounts/8720916/Qualia" target="_blank">Livestream</a></span><span id="u13740-8"> </span>Bushwick among with students from Design and Technology program at Parsons the school of design.</p>
      </div>
      <!-- /m_editable -->
      <div class="clearfix grpelem" id="u13735"><!-- group -->
