better link style

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>Home</title>
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
-  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?230036770"/>
-  <link rel="stylesheet" type="text/css" href="css/index.css?380157886" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/master_a-master.css?463033209"/>
+  <link rel="stylesheet" type="text/css" href="css/index.css?331517318" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?4160313868"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?372300984"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -164,9 +164,9 @@ transition:300ms;
     <img class="colelem" id="u15353-4" alt="Hello, I'm Nitcha or Fame, a visual designer who in love with visual aesthetic, moving image and physical interaction. Welcome to my website. " width="550" height="108" src="images/u15353-4.png"/><!-- rasterized frame -->
     <div class="clearfix colelem" id="u15348"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U15350-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u15350-11" data-muse-uid="U15350" data-muse-type="txt_frame"><!-- content -->
-      <p id="u15350-6"><span class="BoldMenuLink" id="u15350">I'm recently exploring, researching the speculative human-machine interaction by creating a series of wearable devices questioning how alternative tool can shape motility, which could impact the perception of the sedentary society. See more about project '</span><span><a class="nonblock" href="attamatic.html" data-href="page:U15059"><span class="BoldMenuLink" id="u15350-2">Atta-matic</span></a></span><span class="BoldMenuLink" id="u15350-5">.'</span></p>
-      <p id="u15350-9"><span id="u15350-7">— </span>2015–2016</p>
+     <div class="clearfix grpelem" id="u15350-9" data-muse-uid="U15350" data-muse-type="txt_frame"><!-- content -->
+      <p id="u15350-4"><span class="BoldMenuLink" id="u15350">I'm recently exploring, researching the speculative human-machine interaction by creating a series of wearable devices questioning how alternative tool can shape motility, which could impact the perception of the sedentary society. See more about project '</span><span class="BoldMenuLink" id="u15350-2"><span class="actAsInlineDiv normal_text" id="u24404"><!-- content --><!-- m_editable region-id="editable-static-tag-U24402-BP_infinity" template="index.html" data-type="html" data-ice-options="disableImageResize,link" data-ice-editable="link" --><a class="nonblock nontext actAsDiv clearfix excludeFromNormalFlow" id="u24402-5" href="attamatic.html" data-href="page:U15059" data-muse-uid="U24402" data-muse-type="txt_frame"><!-- content --><span class="actAsPara" id="u24402-3"><span class="Character-Style" id="u24402">&nbsp;</span><span class="Character-Style" id="u24402-2">Atta-matic.</span></span></a><!-- /m_editable --></span></span><span class="BoldMenuLink" id="u15350-3">'</span></p>
+      <p id="u15350-7"><span id="u15350-5">— </span>2015–2016</p>
      </div>
      <!-- /m_editable -->
     </div>
