--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <!-- CSS -->
   <link rel="stylesheet" type="text/css" href="css/site_global.css?120317707"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?66529189"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?78777350" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?140600584" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
   <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?523077845"/>
@@ -58,7 +58,7 @@ var __adobewebfontsappname__ = "muse";
    </div>
    <div class="clearfix colelem" id="u24286"><!-- column -->
     <!-- m_editable region-id="editable-static-tag-U24288-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
-    <a class="nonblock nontext clearfix colelem" id="u24288-4" href="2016resumenitcha_update1.pdf" data-muse-uid="U24288" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24288">Download Nitcha's Resumé</span></p></a>
+    <a class="nonblock nontext clearfix colelem" id="u24288-4" href="2016_resumenitcha.pdf" data-muse-uid="U24288" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24288">Download Nitcha's Resumé</span></p></a>
     <!-- /m_editable -->
     <!-- m_editable region-id="editable-static-tag-U24287-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
     <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
