--- a/about.html
+++ b/about.html
@@ -11,12 +11,12 @@
   <link rel="shortcut icon" href="images/favicon.ico?236454869"/>
   <title>About</title>
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?120317707"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css?4027422851"/>
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?66529189"/>
-  <link rel="stylesheet" type="text/css" href="css/about.css?140600584" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/about.css?4110944833" id="pagesheet"/>
   <!-- IE-only CSS -->
   <!--[if lt IE 9]>
-  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?523077845"/>
+  <link rel="stylesheet" type="text/css" href="css/iefonts_about.css?388134542"/>
   <![endif]-->
   <!-- Other scripts -->
   <script type="text/javascript">
@@ -64,30 +64,34 @@ var __adobewebfontsappname__ = "muse";
     <a class="nonblock nontext clearfix colelem" id="u24287-4" href="https://www.linkedin.com/in/nitcha-tothong-5a537184" data-muse-uid="U24287" data-muse-type="txt_frame"><!-- content --><p><span class="Character-Style" id="u24287">Connect on Linkedin</span></p></a>
     <!-- /m_editable -->
    </div>
-   <div class="clearfix colelem" id="ppu24148-51"><!-- group -->
-    <div class="clearfix grpelem" id="pu24148-51"><!-- group -->
+   <div class="clearfix colelem" id="ppu24148-67"><!-- group -->
+    <div class="clearfix grpelem" id="pu24148-67"><!-- group -->
      <!-- m_editable region-id="editable-static-tag-U24148-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link" -->
-     <div class="clearfix grpelem" id="u24148-51" data-muse-uid="U24148" data-muse-type="txt_frame"><!-- content -->
+     <div class="clearfix grpelem" id="u24148-67" data-muse-uid="U24148" data-muse-type="txt_frame"><!-- content -->
       <p id="u24148-2"><span id="u24148">–</span></p>
       <p id="u24148-4">Exhibitions and Demos</p>
       <p id="u24148-6">2016</p>
-      <p id="u24148-9"><span id="u24148-7">Atta-matic </span>at Bushwick Collective 2016, Brooklyn.</p>
-      <p id="u24148-12"><span id="u24148-10">Atta-matic</span> at Between Spaces, New York.</p>
-      <p id="u24148-15"><span id="u24148-13">Lick it </span>at IndieCade East, Museum of Moving Image, New York.</p>
-      <p id="u24148-18"><span id="u24148-16">Dilation </span>at Parsons Gala 2016, New York.</p>
-      <p id="u24148-21"><span id="u24148-19">Atta-matic</span> at SXstyle at SXSW, Austin.</p>
-      <p id="u24148-24"><span id="u24148-22">Lick it</span> at Meal of Fortune, Babycastles, New York.</p>
-      <p id="u24148-25">&nbsp;</p>
-      <p id="u24148-27">2015</p>
-      <p id="u24148-30"><span id="u24148-28">Lick it</span> at Newline, Babycastles, New York.</p>
-      <p id="u24148-33"><span id="u24148-31">Dilation</span> at Qualia, Livestream Bushwick, Brooklyn.</p>
-      <p id="u24148-36"><span id="u24148-34">Keybod</span> at NYC Media Lab Summit 2015, New York.</p>
-      <p id="u24148-39"><span id="u24148-37">Keybod</span> at Demo Night: Sound + Textiles at Eyebeam, New York.</p>
-      <p id="u24148-40">&nbsp;</p>
-      <p id="u24148-42">2009</p>
-      <p id="u24148-45"><span id="u24148-43">Rest(less)</span> at Ploysang 3, TCDC, Bangkok.</p>
-      <p id="u24148-48"><span id="u24148-46">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok.</p>
-      <p id="u24148-49">&nbsp;</p>
+      <p id="u24148-9"><span id="u24148-7">Atta-matic </span>at BIOMEDevice Conference, San Jose.</p>
+      <p id="u24148-14"><span id="u24148-10">Atta-matic </span>at Maker Faire, New Yor<span id="u24148-12">k</span>.</p>
+      <p id="u24148-17"><span id="u24148-15">Atta-matic </span>at NYC Media Lab Summit 2016, New York.</p>
+      <p id="u24148-22"><span id="u24148-18">Keybod </span>and<span id="u24148-20"> Text-neck</span> at Erote, Hollow Art Space, Brooklyn</p>
+      <p id="u24148-25"><span id="u24148-23">Atta-matic </span>at Bushwick Collective 2016, Brooklyn.</p>
+      <p id="u24148-28"><span id="u24148-26">Atta-matic</span> at Between Spaces, New York.</p>
+      <p id="u24148-31"><span id="u24148-29">Lick it </span>at IndieCade East, Museum of Moving Image, New York.</p>
+      <p id="u24148-34"><span id="u24148-32">Dilation </span>at Parsons Gala 2016, New York.</p>
+      <p id="u24148-37"><span id="u24148-35">Atta-matic</span> at SXstyle at SXSW, Austin.</p>
+      <p id="u24148-40"><span id="u24148-38">Lick it</span> at Meal of Fortune, Babycastles, New York.</p>
+      <p id="u24148-41">&nbsp;</p>
+      <p id="u24148-43">2015</p>
+      <p id="u24148-46"><span id="u24148-44">Lick it</span> at Newline, Babycastles, New York.</p>
+      <p id="u24148-49"><span id="u24148-47">Dilation</span> at Qualia, Livestream Bushwick, Brooklyn.</p>
+      <p id="u24148-52"><span id="u24148-50">Keybod</span> at NYC Media Lab Summit 2015, New York.</p>
+      <p id="u24148-55"><span id="u24148-53">Keybod</span> at Demo Night: Sound + Textiles at Eyebeam, New York.</p>
+      <p id="u24148-56">&nbsp;</p>
+      <p id="u24148-58">2009</p>
+      <p id="u24148-61"><span id="u24148-59">Rest(less)</span> at Ploysang 3, TCDC, Bangkok.</p>
+      <p id="u24148-64"><span id="u24148-62">Rest(less)</span> at Degree show2009, Parc Paragon, Bangkok.</p>
+      <p id="u24148-65">&nbsp;</p>
      </div>
      <!-- /m_editable -->
      <!-- m_editable region-id="editable-static-tag-U24545-BP_infinity" template="about.html" data-type="html" data-ice-options="disableImageResize,link,clickable" data-ice-editable="link" -->
